--- a/css/custom.css
+++ b/css/custom.css
@@ -89,14 +89,14 @@
   padding: 0;
   border: 0;
   font-weight: bold;
-  color: #A6A6A6;
-}
-
-#Side_slide #menu ul li.w-menu-inline:hover>a {
   color: #a6a6a6;
 }
 
-#Side_slide #menu ul li.w-menu-inline >a:hover {
+#Side_slide #menu ul li.w-menu-inline:hover > a {
+  color: #a6a6a6;
+}
+
+#Side_slide #menu ul li.w-menu-inline > a:hover {
   color: #fff;
 }
 .tp-bgimg.defaultimg {
@@ -342,7 +342,7 @@
   height: 50px;
 }
 .newsletter-content-wrapper .input-group .btn:focus {
-  outline: none!important;
+  outline: none !important;
 }
 
 .contact-section {
@@ -370,7 +370,7 @@
   color: #315879;
 }
 .footer-menu {
-margin-top: 40px;
+  margin-top: 40px;
 }
 .footer-menu ul {
   margin-left: 5px;
@@ -390,7 +390,7 @@ margin-top: 40px;
 .contact-section .alignright {
   margin-top: 0;
 }
-.contact-section .social-icons a{
+.contact-section .social-icons a {
   color: white;
   width: 25px;
   height: 25px;
@@ -405,15 +405,54 @@ margin-top: 40px;
 
 .contact-section .social-icons a i {
   position: absolute;
-  top: 47%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
-.contact-section .social-icons a.fb-icon{background-color: #3b5998;}
-.contact-section .social-icons a.tw-icon{background-color: #55acee;}
-.contact-section .social-icons a.yt-icon{background-color: #d42428;}
+.contact-section .social-icons a.fb-icon {
+  background-color: #3b5998;
+}
+.contact-section .social-icons a.tw-icon {
+  background-color: #55acee;
+}
+.contact-section .social-icons a.yt-icon {
+  background-color: #d42428;
+}
 
 /* media queries */
+
+@media only screen and (min-width: 768px) {
+  #Top_bar #logo img {
+    max-height: none;
+  }
+  .blog-section .one-second.mcb-wrap.left {
+    padding: 0 3% 0 0;
+  }
+  .blog-section .one-second.mcb-wrap.right {
+    padding: 0 0 0 3%;
+  }
+  .wwd-section {
+    padding-bottom: 20px;
+  }
+  .wwd-heading-wrapper {
+    position: relative;
+    left: 50px;
+  }
+  .wwd-heading {
+    font-size: 60px;
+  }
+  .green-box .hover_color_wrapper {
+    padding: 30px;
+  }
+  .contact-section {
+    padding-bottom: 70px;
+  }
+  #partners {
+    padding-top: 35px;
+  }
+}
+
+
 @media only screen and (min-width: 1240px) {
   #Top_bar .mcb-wrap-inner {
     width: 1200px;
@@ -447,48 +486,19 @@ margin-top: 40px;
   }
 }
 
-@media only screen and (max-width: 1239px){
-#Top_bar a.responsive-menu-toggle {
+@media only screen and (max-width: 1239px) {
+  #Top_bar a.responsive-menu-toggle {
     top: 15px;
-}
+  }
 }
 
 @media screen and (max-width: 959px) {
   .footer-menu {
     margin-top: 15px;
-}
+  }
 }
 
-@media only screen and (min-width: 768px) {
-  #Top_bar #logo img {
-    max-height: none;
-  }
-  .blog-section .one-second.mcb-wrap.left {
-    padding: 0 3% 0 0;
-  }
-  .blog-section .one-second.mcb-wrap.right {
-    padding: 0 0 0 3%;
-  }
-  .wwd-section {
-    padding-bottom: 20px;
-  }
-  .wwd-heading-wrapper {
-    position: relative;
-    left: 50px;
-  }
-  .wwd-heading {
-    font-size: 60px;
-  }
-  .green-box .hover_color_wrapper {
-    padding: 30px;
-  }
-  .contact-section {
-    padding-bottom: 70px;
-  }
-  #partners {
-    padding-top: 35px;
-  }
-}
+
 
 @media only screen and (max-width: 767px) {
   .blog-wrapper.first {
@@ -540,6 +550,7 @@ margin-top: 40px;
   }
   .wwd-section {
     background-position: right;
+    padding-bottom: 35px;
   }
   .wwd-front {
     background-image: none !important;
@@ -556,44 +567,49 @@ margin-top: 40px;
     font-size: 18px;
     font-weight: 500;
     line-height: 24px;
+  }
+  .contact-section {
+    background-size: cover;
+    padding-top: 0px;
+    padding-bottom: 70px;
+    margin-top: 0px;
+    background-repeat: no-repeat;
+    background-position: right;
+  }
+  .footer-menu {
+    margin-top: 0px;
+    margin-bottom: 20px;
+  }
+  .contact-section .image_wrapper {
+    margin-bottom: 30px;
+  }
+  .contact-section h6 {
+    margin-top: 70px;
+  }
+  .contact-section .contact-heading {
+    font-size: 65px;
+    line-height: 70px;
+    color: #ddd;
+    margin-bottom: 15px;
+    /* text-shadow: none; */
+  }
+  .footer-menu ul li:not(:last-child) {
+    padding-right: 10px;
+  }
+  .footer-menu ul li a {
+    font-size: 15px;
+  }
+  .newsletter-content-wrapper .input-group .btn,
+  .newsletter-content-wrapper .input-group input {
+    font-size: 16px;
+  }
+  .tp-caption.main-heading {
+    font-size: 22px;
+  }
+  .newsletter-content-wrapper .input-group input {
+    height: 40px;
+  }
+  .newsletter-content-wrapper .input-group .btn {
+    height: 40px;
+  }
 }
-.contact-section {
-  background-size: cover;
-  padding-top: 0px;
-  padding-bottom: 70px;
-  margin-top: 0px;
-  background-repeat: no-repeat;
-  background-position: right;
-}
-.footer-menu {
-  margin-top: 0px;
-  margin-bottom: 20px;
-}
-.contact-section .image_wrapper {
-  margin-bottom: 30px;
-}
-.contact-section h6 {
-  margin-top: 70px;
-}
-.contact-section .contact-heading {
-  font-size: 65px;
-  line-height: 70px;
-  color: #ddd;
-  margin-bottom: 15px;
-  /* text-shadow: none; */
-}
-.footer-menu ul li:not(:last-child) {
-  padding-right: 10px;
-}
-.footer-menu ul li a {
-  font-size: 15px;
-}
-.newsletter-content-wrapper .input-group .btn,
-.newsletter-content-wrapper .input-group input {
-  font-size: 16px;
-}
-.tp-caption.main-heading {
-font-size: 22px;
-}
-}
-
