--- a/css/custom.css
+++ b/css/custom.css
@@ -624,9 +624,10 @@
     font-size: 10px;
     position: relative;
   }
-  /* .tp-readmore {
+  .tp-readmore {
     z-index: 7; white-space: nowrap; font-size: 10px; line-height: 24px; font-weight: 700; color: #c92031; letter-spacing: 0px; font-family: Barlow Semi Condensed; text-decoration: none; transition: all .3s;
-  } */
+  }
+ 
   .newsletter-section {
     background-size: cover;
     padding-bottom: 70px;
